# aws-robomaker-bookstore-world

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
launch/: bookstore.launch  bookstore.launch.py  bookstore_turtlebot_navigation.launch  bookstore_turtlebot_slam.launch  turtlebot3_navigation.launch  view_bookstore.launch  view_bookstore.launch.py
maps/turtlebot3_waffle_pi/: map.pgm
models/aws_robomaker_retail_AirConditionerC_01/: model.sdf
models/aws_robomaker_retail_Bicycle_01/: model.sdf
models/aws_robomaker_retail_BookA_01/: model.sdf
models/aws_robomaker_retail_BookC_01/: model.sdf
models/aws_robomaker_retail_BookD_01/: model.sdf
models/aws_robomaker_retail_BookE_01/: model.sdf
models/aws_robomaker_retail_BookF_01/: model.sdf
models/aws_robomaker_retail_BookshelfA_01/: model.sdf
models/aws_robomaker_retail_BookshelfB_01/: model.sdf
models/aws_robomaker_retail_BookshelfC_01/: model.sdf
models/aws_robomaker_retail_BookstoreLogo_01/: model.sdf
models/aws_robomaker_retail_ColumnA_01/: model.sdf
models/aws_robomaker_retail_ColumnB_01/: model.sdf
models/aws_robomaker_retail_Computer_01/: model.sdf
models/aws_robomaker_retail_DeskA_01/: model.sdf
models/aws_robomaker_retail_DeskB_01/: model.sdf
models/aws_robomaker_retail_DoorB_01/: model.sdf
models/aws_robomaker_retail_Holder_01/: model.sdf
models/aws_robomaker_retail_Horologe_01/: model.sdf
models/aws_robomaker_retail_LightA_01/: model.sdf
param/: burger.yaml  waffle_pi.yaml
routes/: route.yaml
worlds/: bookstore.world  bookstore.world.erb  bookstore_dynamic.world
(+10 files in other folders)
