<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>aws_robomaker_bookstore_world</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker package for a bookstore with sheling and tables Gazebo simulations.
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_pkgs</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" plugin_path="${prefix}/lib" />
  </export>
</package>
